--- a/Client.Blazor/Pages/Login.razor
+++ b/Client.Blazor/Pages/Login.razor
@@ -24,39 +24,36 @@
             <h1>Log in !</h1>
         </div>
 
-        <!-- Registeration Form -->
+        <!-- Login Form -->
         <div class="col-md-7 col-lg-6 ml-auto">
-            <div class="row">
+            <EditForm Model="@user" OnInvalidSubmit="@HandleInvalidSubmit">
+                <div class="alert @StatusClass">@StatusMessage</div>
 
+                <DataAnnotationsValidator />
+                <ValidationSummary />
 
+                <div class="form-group">
 
-                <!-- Email Address -->
+                </div>
                 <div class="input-group col-lg-12 mb-4">
                     <div class="input-group-prepend">
                         <span class="input-group-text bg-white px-4 border-md border-right-0">
                             <i class="fa fa-envelope text-muted"></i>
                         </span>
                     </div>
-                    <input id="email" type="email" name="email" @bind="user.Email" placeholder="Email Address" class="form-control bg-white border-left-0 border-md" required>
+                    <InputText Id="email" Class="form-control bg-white border-left-0 border-md" @bind-Value="@user.Email" placeholder="Email"></InputText>
+                    <ValidationMessage For="@(() => user.Email)" />
                 </div>
-
-
-                <!-- Password -->
                 <div class="input-group col-lg-12 mb-4">
                     <div class="input-group-prepend">
                         <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-lock text-muted"></i>
+                            <i class="fa fa-envelope text-muted"></i>
                         </span>
                     </div>
-                    <input id="password" type="password" name="password" @bind="user.Password" placeholder="Password" class="form-control bg-white border-left-0 border-md" required>
+                    <InputText type="password" placeholder="Password" Class="form-control" @bind-Value="@user.Password" />
+                    <ValidationMessage For="@(() => user.Password)" />
                 </div>
-
-                <!-- Submit Button -->
-                <div class="form-group col-lg-12 mx-auto mb-0">
-
-                    <button @onclick="@LoginUser" class="btn btn-primary btn-block py-2">Login</button>
-                </div>
-
+                <button @onclick="@LoginUser" class="btn btn-primary btn-block py-2">Login</button>
                 <!-- Line -->
                 <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
                     <div class="border-bottom w-100 ml-5"></div>
@@ -68,17 +65,22 @@
                 <div class="text-center w-100">
                     <p class="text-muted font-weight-bold">Need an account?<a href="/register" class="text-primary ml-2">Register!</a></p>
                 </div>
-
-            </div>
+            </EditForm>
         </div>
+
     </div>
 </div>
+
+
+
 
 @code {
     private string apiUrl = "http://localhost:5003/login";
 
     private User user = new User();
 
+    private string StatusMessage;
+    private string StatusClass;
     private async void LoginUser()
     {
         //user.UserId = Guid.NewGuid();
@@ -99,8 +101,10 @@
 
     public class User
     {
-
+        [Required]
         public string Email { get; set; }
+        [Required]
+        [StringLength(10, ErrorMessage = "Name is too long.")]
         public string Password { get; set; }
     }
 
@@ -110,5 +114,18 @@
         public string FirstName { get; set; }
         public string LastName { get; set; }
         public bool IsAdmin { get; set; }
+    }
+
+
+    protected void HandleValidSubmit()
+    {
+        StatusClass = "alert-info";
+        StatusMessage = DateTime.Now + " Handle valid submit";
+    }
+
+    protected void HandleInvalidSubmit()
+    {
+        StatusClass = "alert-danger";
+        StatusMessage = DateTime.Now + " Handle invalid submit";
     }
 }
