--- a/Client.Blazor/Pages/Locations.razor
+++ b/Client.Blazor/Pages/Locations.razor
@@ -1,45 +1,40 @@
 ﻿@page "/locations"
-
 @using Client.Blazor.Data
-@inject WeatherForecastService ForecastService
+@*@inject WeatherForecastService ForecastService*@
+@inject IJSRuntime JSRuntime
+@inherits SiteMapperBase
 
 <h1>Locations</h1>
 
+<div id='map' style='width: 800px; height: 400px'></div>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
 
-@code {
-    private WeatherForecast[] forecasts;
+@*@if (forecasts == null)
+	{
+		<p><em>Loading...</em></p>
 
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-    }
-}
+	}
+	else
+	{
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Date</th>
+					<th>Temp. (C)</th>
+					<th>Temp. (F)</th>
+					<th>Summary</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var forecast in forecasts)
+				{
+					<tr>
+						<td>@forecast.Date.ToShortDateString()</td>
+						<td>@forecast.TemperatureC</td>
+						<td>@forecast.TemperatureF</td>
+						<td>@forecast.Summary</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	}*@
