-login register finished

--- a/Client.Blazor/Pages/Login.razor
+++ b/Client.Blazor/Pages/Login.razor
@@ -47,7 +47,7 @@
                 <div class="input-group col-lg-12 mb-4">
                     <div class="input-group-prepend">
                         <span class="input-group-text bg-white px-4 border-md border-right-0">
-                            <i class="fa fa-envelope text-muted"></i>
+                            <i class="fa fa-key"></i>
                         </span>
                     </div>
                     <InputText type="password" placeholder="Password" Class="form-control" @bind-Value="@user.Password" />
