--- a/Client.Blazor/Pages/Locations.razor
+++ b/Client.Blazor/Pages/Locations.razor
@@ -6,7 +6,7 @@
 
 <h1>Locations</h1>
 
-<div id='map' style='width: 800px; height: 400px'></div>
+<div id='map'></div>
 
 
 @*@if (forecasts == null)
