--- a/Client.Blazor/Shared/MainLayout.razor
+++ b/Client.Blazor/Shared/MainLayout.razor
@@ -7,9 +7,9 @@
 <div class="main">
     @if (fname != null)
     {
-        <div class="top-row px-4">
-            <a href="/login">Hello, @fname @lname</a>
-        </div>
+    <div class="top-row px-4">
+        Hello,<a href="/login"> @fname @lname</a>
+    </div>
     }
     else
     {
