--- a/Client.Blazor/Shared/NavMenu.razor
+++ b/Client.Blazor/Shared/NavMenu.razor
@@ -21,6 +21,12 @@
         </li>
         @if (email != null)
         {
+
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="editprofile">
+                    <i class="fa fa-user fa-lg"></i> &nbsp;&nbsp;Edit profile
+                </NavLink>
+            </li>
             <li class="nav-item px-3">
                 <button @onclick="DeleteSession" class="nav-link" style="
                                                                         background: transparent;
